# wauth

./: .env.example  Cargo.toml  Makefile  README.md
src/: graphql.html  main.rs  schema.rs
src/application/: mod.rs
src/domain/: mod.rs  models.rs  repository.rs  totp.rs
src/infrastructure/: aws.rs  config.rs  env.rs
