[package]
name = "wauth"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.94"
async-trait = "0.1.83"
aws-config = "1.5.10"
aws-sdk-dynamodb = "1.55.0"
base32 = "0.5.1"
chrono = "0.4.39"
clap = { version = "4.5.23", features = [
    "color",
    "error-context",
    "help",
    "suggestions",
    "usage",
    "cargo",
    "derive",
    "env",
    "unicode",
    "wrap_help",
    "string",
] }
dirs = "5.0.1"
dotenvy = "0.15.7"
hmac = "0.12.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_derive = "1.0.216"
sha1 = "0.10.6"
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["full", "test-util"] }
toml = "0.8.19"
